Asg3/WMASG3/yyparse.output
Nonterminals useless in grammar

   param


Terminals unused in grammar

   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_FIELD
   TOK_ROOT
   TOK_DECLID
   TOK_INDEX
   TOK_NEWSTRING
   TOK_RETURNVOID
   TOK_VARDECL
   TOK_FUNCTION
   TOK_PARAMLIST
   TOK_PROTOTYPE


Rules useless in grammar

   80 param: param ',' identdecl
   81      | '(' identdecl


State 130 conflicts: 27 reduce/reduce
State 132 conflicts: 27 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program structdef
    2        | program function
    3        | program statement
    4        | program error '}'
    5        | program error ';'
    6        | /* empty */

    7 @1: /* empty */

    8 structdef: TOK_STRUCT TOK_IDENT '{' '}' @1 declarations '}'

    9 declarations: TOK_STRUCT TOK_IDENT '{' identdecl ';'
   10             | declarations identdecl ';'

   11 basetype: TOK_VOID
   12         | TOK_BOOL
   13         | TOK_CHAR
   14         | TOK_INT
   15         | TOK_STRING
   16         | TOK_IDENT

   17 function: identdecl '(' ')' ';'
   18         | identdecl '(' ')' block
   19         | identdecl funcp ')' block
   20         | identdecl funcp ')' ';'

   21 funcp: '(' identdecl
   22      | funcp ',' identdecl

   23 identdecl: basetype TOK_ARRAY TOK_IDENT
   24          | basetype TOK_IDENT

   25 block: '{' '}'
   26      | blkstmts '}'
   27      | ';'

   28 blkstmts: '{' statement
   29         | blkstmts statement

   30 statement: block
   31          | vardecl
   32          | while
   33          | ifelse
   34          | return
   35          | expr ';'

   36 vardecl: identdecl '=' expr ';'

   37 while: TOK_WHILE '(' expr ')' statement

   38 ifelse: TOK_IF '(' expr ')' statement
   39       | TOK_IF '(' expr ')' statement TOK_ELSE statement

   40 return: TOK_RETURN expr ';'
   41       | TOK_RETURN ';'

   42 expr: constant
   43     | variable
   44     | '(' expr ')'
   45     | call
   46     | allocator
   47     | expr '=' expr
   48     | expr TOK_EQ expr
   49     | expr TOK_NE expr
   50     | expr TOK_LT expr
   51     | expr TOK_LE expr
   52     | expr TOK_GT expr
   53     | expr TOK_GE expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr '*' expr
   57     | expr '/' expr
   58     | expr '%' expr
   59     | TOK_ORD expr
   60     | TOK_CHR expr
   61     | '!' expr
   62     | '+' expr
   63     | '-' expr

   64 allocator: TOK_NEW TOK_IDENT '(' ')'
   65          | TOK_NEW TOK_STRING '(' expr ')'
   66          | TOK_NEW basetype '[' expr ']'

   67 call: TOK_IDENT '(' ')'
   68     | arg ')'

   69 arg: TOK_IDENT '(' expr
   70    | arg ',' expr

   71 variable: TOK_IDENT
   72         | expr '[' expr ']'
   73         | expr '.' TOK_IDENT

   74 constant: TOK_INTCON
   75         | TOK_CHARCON
   76         | TOK_STRINGCON
   77         | TOK_FALSE
   78         | TOK_TRUE
   79         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'%' (37) 58
'(' (40) 17 18 21 37 38 39 44 64 65 67 69
')' (41) 17 18 19 20 37 38 39 44 64 65 67 68
'*' (42) 56
'+' (43) 54 62
',' (44) 22 70
'-' (45) 55 63
'.' (46) 73
'/' (47) 57
';' (59) 5 9 10 17 20 27 35 36 40 41
'=' (61) 36 47
'[' (91) 66 72
']' (93) 66 72
'{' (123) 8 9 25 28
'}' (125) 4 8 25 26
error (256) 4 5
TOK_VOID (258) 11
TOK_BOOL (259) 12
TOK_CHAR (260) 13
TOK_INT (261) 14
TOK_STRING (262) 15 65
TOK_IF (263) 38 39
TOK_ELSE (264) 39
TOK_WHILE (265) 37
TOK_RETURN (266) 40 41
TOK_STRUCT (267) 8 9
TOK_FALSE (268) 77
TOK_TRUE (269) 78
TOK_NULL (270) 79
TOK_NEW (271) 64 65 66
TOK_ARRAY (272) 23
TOK_EQ (273) 48
TOK_NE (274) 49
TOK_LT (275) 50
TOK_LE (276) 51
TOK_GT (277) 52
TOK_GE (278) 53
TOK_IDENT (279) 8 9 16 23 24 64 67 69 71 73
TOK_INTCON (280) 74
TOK_CHARCON (281) 75
TOK_STRINGCON (282) 76
TOK_BLOCK (283)
TOK_CALL (284)
TOK_IFELSE (285)
TOK_INITDECL (286)
TOK_POS (287)
TOK_NEG (288)
TOK_NEWARRAY (289)
TOK_TYPEID (290)
TOK_FIELD (291)
TOK_ORD (292) 59
TOK_CHR (293) 60
TOK_ROOT (294)
TOK_DECLID (295)
TOK_INDEX (296)
TOK_NEWSTRING (297)
TOK_RETURNVOID (298)
TOK_VARDECL (299)
TOK_FUNCTION (300)
TOK_PARAMLIST (301)
TOK_PROTOTYPE (302)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3 4 5
structdef (66)
    on left: 8, on right: 1
@1 (67)
    on left: 7, on right: 8
declarations (68)
    on left: 9 10, on right: 8 10
basetype (69)
    on left: 11 12 13 14 15 16, on right: 23 24 66
function (70)
    on left: 17 18 19 20, on right: 2
funcp (71)
    on left: 21 22, on right: 19 20 22
identdecl (72)
    on left: 23 24, on right: 9 10 17 18 19 20 21 22 36
block (73)
    on left: 25 26 27, on right: 18 19 30
blkstmts (74)
    on left: 28 29, on right: 26 29
statement (75)
    on left: 30 31 32 33 34 35, on right: 3 28 29 37 38 39
vardecl (76)
    on left: 36, on right: 31
while (77)
    on left: 37, on right: 32
ifelse (78)
    on left: 38 39, on right: 33
return (79)
    on left: 40 41, on right: 34
expr (80)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63, on right: 35 36 37 38 39 40 44 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 65 66 69 70 72 73
allocator (81)
    on left: 64 65 66, on right: 46
call (82)
    on left: 67 68, on right: 45
arg (83)
    on left: 69 70, on right: 68 70
variable (84)
    on left: 71 72 73, on right: 43
constant (85)
    on left: 74 75 76 77 78 79, on right: 42


State 0

    0 $accept: . program $end

    $default  reduce using rule 6 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . structdef
    2        | program . function
    3        | program . statement
    4        | program . error '}'
    5        | program . error ';'

    $end           shift, and go to state 2
    error          shift, and go to state 3
    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_STRUCT     shift, and go to state 12
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    structdef  go to state 29
    basetype   go to state 30
    function   go to state 31
    identdecl  go to state 32
    block      go to state 33
    blkstmts   go to state 34
    statement  go to state 35
    vardecl    go to state 36
    while      go to state 37
    ifelse     go to state 38
    return     go to state 39
    expr       go to state 40
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 2

    0 $accept: program $end .

    $default  accept


State 3

    4 program: program error . '}'
    5        | program error . ';'

    '}'  shift, and go to state 46
    ';'  shift, and go to state 47


State 4

   11 basetype: TOK_VOID .

    $default  reduce using rule 11 (basetype)


State 5

   12 basetype: TOK_BOOL .

    $default  reduce using rule 12 (basetype)


State 6

   13 basetype: TOK_CHAR .

    $default  reduce using rule 13 (basetype)


State 7

   14 basetype: TOK_INT .

    $default  reduce using rule 14 (basetype)


State 8

   15 basetype: TOK_STRING .

    $default  reduce using rule 15 (basetype)


State 9

   38 ifelse: TOK_IF . '(' expr ')' statement
   39       | TOK_IF . '(' expr ')' statement TOK_ELSE statement

    '('  shift, and go to state 48


State 10

   37 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 49


State 11

   40 return: TOK_RETURN . expr ';'
   41       | TOK_RETURN . ';'

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    ';'            shift, and go to state 51

    expr       go to state 52
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 12

    8 structdef: TOK_STRUCT . TOK_IDENT '{' '}' @1 declarations '}'

    TOK_IDENT  shift, and go to state 53


State 13

   77 constant: TOK_FALSE .

    $default  reduce using rule 77 (constant)


State 14

   78 constant: TOK_TRUE .

    $default  reduce using rule 78 (constant)


State 15

   79 constant: TOK_NULL .

    $default  reduce using rule 79 (constant)


State 16

   64 allocator: TOK_NEW . TOK_IDENT '(' ')'
   65          | TOK_NEW . TOK_STRING '(' expr ')'
   66          | TOK_NEW . basetype '[' expr ']'

    TOK_VOID    shift, and go to state 4
    TOK_BOOL    shift, and go to state 5
    TOK_CHAR    shift, and go to state 6
    TOK_INT     shift, and go to state 7
    TOK_STRING  shift, and go to state 54
    TOK_IDENT   shift, and go to state 55

    basetype  go to state 56


State 17

   16 basetype: TOK_IDENT .
   67 call: TOK_IDENT . '(' ')'
   69 arg: TOK_IDENT . '(' expr
   71 variable: TOK_IDENT .

    '('  shift, and go to state 57

    TOK_ARRAY  reduce using rule 16 (basetype)
    TOK_IDENT  reduce using rule 16 (basetype)
    $default   reduce using rule 71 (variable)


State 18

   74 constant: TOK_INTCON .

    $default  reduce using rule 74 (constant)


State 19

   75 constant: TOK_CHARCON .

    $default  reduce using rule 75 (constant)


State 20

   76 constant: TOK_STRINGCON .

    $default  reduce using rule 76 (constant)


State 21

   59 expr: TOK_ORD . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 58
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 22

   60 expr: TOK_CHR . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 59
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 23

   62 expr: '+' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 60
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 24

   63 expr: '-' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 61
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 25

   61 expr: '!' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 62
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 26

   44 expr: '(' . expr ')'

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 63
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 27

   27 block: ';' .

    $default  reduce using rule 27 (block)


State 28

   25 block: '{' . '}'
   28 blkstmts: '{' . statement

    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    '}'            shift, and go to state 64
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    basetype   go to state 30
    identdecl  go to state 65
    block      go to state 33
    blkstmts   go to state 34
    statement  go to state 66
    vardecl    go to state 36
    while      go to state 37
    ifelse     go to state 38
    return     go to state 39
    expr       go to state 40
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 29

    1 program: program structdef .

    $default  reduce using rule 1 (program)


State 30

   23 identdecl: basetype . TOK_ARRAY TOK_IDENT
   24          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 67
    TOK_IDENT  shift, and go to state 68


State 31

    2 program: program function .

    $default  reduce using rule 2 (program)


State 32

   17 function: identdecl . '(' ')' ';'
   18         | identdecl . '(' ')' block
   19         | identdecl . funcp ')' block
   20         | identdecl . funcp ')' ';'
   36 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 69
    '('  shift, and go to state 70

    funcp  go to state 71


State 33

   30 statement: block .

    $default  reduce using rule 30 (statement)


State 34

   26 block: blkstmts . '}'
   29 blkstmts: blkstmts . statement

    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    '}'            shift, and go to state 72
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    basetype   go to state 30
    identdecl  go to state 65
    block      go to state 33
    blkstmts   go to state 34
    statement  go to state 73
    vardecl    go to state 36
    while      go to state 37
    ifelse     go to state 38
    return     go to state 39
    expr       go to state 40
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 35

    3 program: program statement .

    $default  reduce using rule 3 (program)


State 36

   31 statement: vardecl .

    $default  reduce using rule 31 (statement)


State 37

   32 statement: while .

    $default  reduce using rule 32 (statement)


State 38

   33 statement: ifelse .

    $default  reduce using rule 33 (statement)


State 39

   34 statement: return .

    $default  reduce using rule 34 (statement)


State 40

   35 statement: expr . ';'
   47 expr: expr . '=' expr
   48     | expr . TOK_EQ expr
   49     | expr . TOK_NE expr
   50     | expr . TOK_LT expr
   51     | expr . TOK_LE expr
   52     | expr . TOK_GT expr
   53     | expr . TOK_GE expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '%' expr
   72 variable: expr . '[' expr ']'
   73         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 74
    TOK_NE  shift, and go to state 75
    TOK_LT  shift, and go to state 76
    TOK_LE  shift, and go to state 77
    TOK_GT  shift, and go to state 78
    TOK_GE  shift, and go to state 79
    '='     shift, and go to state 80
    '+'     shift, and go to state 81
    '-'     shift, and go to state 82
    '*'     shift, and go to state 83
    '/'     shift, and go to state 84
    '%'     shift, and go to state 85
    '['     shift, and go to state 86
    '.'     shift, and go to state 87
    ';'     shift, and go to state 88


State 41

   46 expr: allocator .

    $default  reduce using rule 46 (expr)


State 42

   45 expr: call .

    $default  reduce using rule 45 (expr)


State 43

   68 call: arg . ')'
   70 arg: arg . ',' expr

    ')'  shift, and go to state 89
    ','  shift, and go to state 90


State 44

   43 expr: variable .

    $default  reduce using rule 43 (expr)


State 45

   42 expr: constant .

    $default  reduce using rule 42 (expr)


State 46

    4 program: program error '}' .

    $default  reduce using rule 4 (program)


State 47

    5 program: program error ';' .

    $default  reduce using rule 5 (program)


State 48

   38 ifelse: TOK_IF '(' . expr ')' statement
   39       | TOK_IF '(' . expr ')' statement TOK_ELSE statement

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 91
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 49

   37 while: TOK_WHILE '(' . expr ')' statement

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 50
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 92
    allocator  go to state 41
    call       go to state 42
    arg        go to state 43
    variable   go to state 44
    constant   go to state 45


State 50

   67 call: TOK_IDENT . '(' ')'
   69 arg: TOK_IDENT . '(' expr
   71 variable: TOK_IDENT .

    '('  shift, and go to state 57

    $default  reduce using rule 71 (variable)


State 51

   41 return: TOK_RETURN ';' .

    $default  reduce using rule 41 (return)


State 52

   40 return: TOK_RETURN expr . ';'
   47 expr: expr . '=' expr
   48     | expr . TOK_EQ expr
   49     | expr . TOK_NE expr
   50     | expr . TOK_LT expr
   51     | expr . TOK_LE expr
   52     | expr . TOK_GT expr
   53     | expr . TOK_GE expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '%' expr
   72 variable: expr . '[' expr ']'
   73         | expr . '.' TOK_IDENT
